# game_math

./: .appveyor.yml  CMakeLists.txt
src/: gmath.hpp  mat4.cpp  mat4.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
test/: mat4_glm.cpp  mat4_ublas.cpp  vec3.cpp  vec3_glm.cpp  vec3_ublas.cpp
